<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".ui.MainActivity"
    tools:layout_editor_absoluteY="50dp">

    <Button
        android:id="@+id/viewButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="432dp"
        android:onClick="clickHandler"
        android:text="View This Contact"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewAllButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="clickHandler"
        android:text="Save This Contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewAllButton"
        app:layout_constraintTop_toBottomOf="@+id/viewButton" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="Put Contact Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/phoneText"
        app:layout_constraintEnd_toEndOf="@+id/phoneText"
        app:layout_constraintStart_toStartOf="@+id/phoneText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Put Contact Phone Number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="53dp"
        android:text="My Contact Book"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.shaochengyang.mycontactbook.ui.ViewFragment"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toTopOf="@+id/viewAllButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <Button
        android:id="@+id/viewAllButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="55dp"
        android:onClick="clickHandler"
        android:text="View All Contacts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkText" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:text="Strop Music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="16dp"
        android:text="Call this person"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/countButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:onClick="clickHandler"
        android:text="Check Validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewButton"
        app:layout_constraintTop_toBottomOf="@+id/viewButton" />

    <TextView
        android:id="@+id/checkText"
        android:layout_width="287dp"
        android:layout_height="25dp"
        android:layout_marginBottom="181dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="235dp"
        app:layout_constraintBottom_toTopOf="@+id/viewAllButton"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>