<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="50dp">

    <TextView
        android:id="@+id/contactInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Contact Information "
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="name"
        app:layout_constraintEnd_toStartOf="@+id/contactInfoText"
        app:layout_constraintTop_toBottomOf="@+id/contactInfoText" />

    <TextView
        android:id="@+id/viewPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="phone"
        app:layout_constraintStart_toStartOf="@+id/viewNameText"
        app:layout_constraintTop_toBottomOf="@+id/viewNameText" />

</android.support.constraint.ConstraintLayout>